# CasperOptions

./: .gitignore  README.md  architecture.md  demo.md  pitch.md  setup.md
contracts/: Makefile  README.md  call-create-option.sh  call-exercise-option.sh  deploy.sh
contracts/option-registry/: Cargo.toml
contracts/option-registry-tests/: Cargo.toml
contracts/option-registry-tests/tests/: integration_tests.rs
contracts/option-registry/src/: main.rs
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/options/: page.tsx
frontend/src/app/dashboard/options/history/: page.tsx
frontend/src/app/dashboard/options/my/: page.tsx
frontend/src/components/layout/: app-sidebar.tsx  header.tsx
frontend/src/config/: nav-config.ts
frontend/src/features/options/: index.ts
frontend/src/features/options/components/: buy-modal.tsx  create-option-form.tsx  exercise-modal.tsx  my-option-card.tsx  option-card.tsx  option-grid.tsx  payoff-chart.tsx  price-chart.tsx  price-display.tsx  transaction-list.tsx  wallet-button.tsx
frontend/src/features/options/constants/: config.ts  mock-data.ts
frontend/src/features/options/utils/: calculations.test.ts  calculations.ts  store.ts
frontend/src/hooks/: use-nav.ts
frontend/src/lib/: casper-wallet.ts
frontend/src/types/: options.ts
