[package]
name = "option-registry-tests"
version = "0.1.0"
edition = "2021"
authors = ["CasperOptions Team"]
description = "Property-based tests for option-registry contract"

[dependencies]
casper-engine-test-support = "7.0.0"
casper-execution-engine = "7.0.0"
casper-types = "4.0.0"
proptest = "1.4"
rand = "0.8"

[dev-dependencies]
once_cell = "1.19"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
