[package]
name = "option-registry"
version = "0.1.0"
edition = "2021"
authors = ["CasperOptions Team"]
description = "Minimal option registry contract for CasperOptions hackathon"

[dependencies]
casper-contract = "5.1.0"
casper-types = "6.1.0"

[[bin]]
name = "option-registry"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"  # Optimize for size

[features]
default = []
